--- a/src/assets/styles/components/_main.scss
+++ b/src/assets/styles/components/_main.scss
@@ -25,6 +25,19 @@ input {
 	}
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+	-moz-appearance: textfield;
+}
+
+
 .wrapper-def {
 	position: relative;
 	display: flex;
